﻿PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2015, PHP 5.5.28

** PHP 5.5 is in security-only mode , please do not commit to this branch **

9 Jul 2015, PHP 5.5.27

- Core:
  . Fixed bug #69768 (escapeshell*() doesn't cater to !). (cmb)
  . Fixed bug #69703 (Use __builtin_clzl on PowerPC).
    (dja at axtens dot net, Kalle)
  . Fixed bug #69732 (can induce segmentation fault with basic php code).
    (Dmitry)
  . Fixed bug #69642 (Windows 10 reported as Windows 8).
    (Christian Wenz, Anatol Belski)
  . Fixed bug #69551 (parse_ini_file() and parse_ini_string() segmentation
    fault). (Christoph M. Becker)
  . Fixed bug #69781 (phpinfo() reports Professional Editions of Windows
    7/8/8.1/10 as "Business"). (Christian Wenz)
  . Fixed bug #69835 (phpinfo() does not report many Windows SKUs).
    (Christian Wenz)
  . Fixed bug #69892 (Different arrays compare indentical due to integer key
    truncation). (Nikita)
  . Fixed bug #69874 (Can't set empty additional_headers for mail()), regression
    from fix to bug #68776. (Yasuo)

- GD:
  . Fixed bug #61221 (imagegammacorrect function loses alpha channel). (cmb)

- Mysqlnd:
  . Fixed bug #69669 (mysqlnd is vulnerable to BACKRONYM) (CVE-2015-3152).
    (Andrey)

- PCRE:
  . Fixed Bug #53823 (preg_replace: * qualifier on unicode replace garbles the
    string). (cmb)
  . Fixed bug #69864 (Segfault in preg_replace_callback) (cmb, ab)

- PDO_pgsql:
  . Fixed bug #69752 (PDOStatement::execute() leaks memory with DML
    Statements when closeCuror() is u). (Philip Hofstetter)
  . Fixed bug #69362 (PDO-pgsql fails to connect if password contains a
    leading single quote). (Matteo)
  . Fixed bug #69344 (PDO PgSQL Incorrect binding numeric array with gaps).
    (Matteo)

- Phar:
  . Fixed bug #69958 (Segfault in Phar::convertToData on invalid file). (Stas)