@@ -1,8 +1,11 @@
-﻿PHP                                                                        NEWS
+PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2015, PHP 5.5.28
 
 ** PHP 5.5 is in security-only mode , please do not commit to this branch **
+
+- Core:
+  . Fixed bug #70002 (TS issues with temporary dir handling). (Anatol)
 
 9 Jul 2015, PHP 5.5.27
 
